--- a/login.html
+++ b/login.html
@@ -189,7 +189,7 @@ a.psw {
         <div class="card-header">
           <div class="card-body">
             <form method="post" action="/home.html">
-
+<!-- email -->
       <label for="uname"><b>Email Address</b></label>
       <input type="email" placeholder="Enter Username" name="user_email_address" id="username" class="form-control" required>
 
