--- a/home/index.html
+++ b/home/index.html
@@ -361,6 +361,7 @@
               </p>
             </div>
           </div>
+          <!-- url -->
           <div class="faq-item">
             <input type="checkbox" id="title8" />
             <label for="title8">What is a QR code and what can it do?</label>
